--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
         "dist": "npm run build:prod ; npm pack",
         "test:cli": "LANG=en_US.UTF8 npm-run-all build:pkg build:dev ; bash test/testSuite.sh",
         "test:web": "LANG=en_US.UTF8 npm-run-all build:test ; open-cli ./test/testSuite.html ; open-cli ./test/testSuite.html -- firefox",
-        "test": "npm-run-all build:dev test:cli",
+        "test": "npm-run-all test:cli",
         "test:all": "npm-run-all test:cli test:web",
         "debug": "npm run build:dev ; node --inspect-brk test/testSuite.js",
         "clean": "git clean -f -d src test; rm -rf lib *.tgz",
